# Pay_Flow

./: .gitignore  Fraud Case Study Reports.md  Implementation_Part1.md  Implementation_Part2.md  Implementation_Part3.md  PHASE_AUDIT_REPORT.md  Problem_Statement.md  README.md  landing.html  main.py  payflow_build_prompt.md  payflow_graph_ui.html  port_check.txt  proc_check.txt  pyproject.toml  temp_ps.txt
artifacts/ledger/: signing_key.pub
config/: __init__.py  gpu_concurrency.py  settings.py  vram_manager.py
data/: ledger.db-shm  ledger.db-wal  ledger2.db-shm  ledger2.db-wal
frontend/app/: index.html  package-lock.json  package.json  vite.config.ts
frontend/app/src/: App.tsx  index.css
frontend/app/src/components/: threat-maps.tsx
frontend/app/src/components/investigations/: escalation-list.tsx  verdict-list.tsx
frontend/app/src/components/layout/: bottom-drawer.tsx  right-sidebar.tsx  root-layout.tsx  runtime-banner.tsx  tab-nav.tsx  top-bar.tsx
frontend/app/src/components/panels/: agent-cot.tsx  ai-investigator-stream.tsx  alert-feed.tsx  circuit-breaker.tsx  consortium-panel.tsx  cryptographic-audit-trail.tsx  drift-monitor-panel.tsx  event-detail-drawer.tsx  explainability-panel.tsx  forensic-evidence-chain.tsx  live-activity-feed.tsx  nl-query-panel.tsx  node-detail-panel.tsx  pipeline-stage-bar.tsx  quick-stats.tsx  risk-heatmap-timeline.tsx  sigma-graph.tsx  sigma-graph.tsx.bak  sigma-graph.tsx.bak2  signal-briefing.tsx  system-metrics.tsx  transaction-graph.tsx  velocity-sparklines.tsx
frontend/app/src/components/shared/: connection-status.tsx  gauge-bar.tsx  metric-card.tsx  severity-badge.tsx
frontend/app/src/components/simulation/: attack-launcher.tsx  custom-event-builder.tsx  pipeline-motion-visualizer.tsx  pipeline-transparency.tsx  scenario-history.tsx  scenario-inspector.tsx  scenario-monitor.tsx  simulation-event-trace.tsx
frontend/app/src/hooks/: use-api.ts  use-dashboard-hydration.ts  use-sse.ts
frontend/app/src/lib/: api-client.ts  sse-manager.ts  types.ts  utils.ts
frontend/app/src/pages/: analytics.tsx  compliance.tsx  intelligence.tsx  investigations.tsx  overview.tsx  system.tsx  threat-sim.tsx
frontend/app/src/stores/: use-activity-store.ts  use-analytics-store.ts  use-dashboard-store.ts  use-simulation-store.ts  use-ui-store.ts
frontend/templates/: dashboard.html
scripts/: Modelfile  deploy_ollama.sh  init_env.sh
src/api/: app.py  events.py
src/api/routes/: __init__.py  analyst.py  analytics.py  dashboard.py  fraud.py  intelligence.py  simulation.py
src/blockchain/: __init__.py  agent_breaker.py  circuit_breaker.py  consortium.py  crypto.py  ledger.py  models.py  storage.py  zkp.py
src/cfr/: __init__.py  registry.py  scoring.py
src/graph/: __init__.py  algorithms.py  builder.py  chain_detector.py
src/ingestion/: __init__.py  schemas.py  stream_processor.py  validators.py
src/ingestion/generators/: __init__.py  synthetic_transactions.py
src/llm/: __init__.py  agent.py  finetuning.py  health_check.py  hitl.py  nl_query.py  orchestrator.py  prompts.py  tools.py  unstructured_agent.py  unstructured_models.py  unstructured_prompts.py
src/ml/: __init__.py  aml_stages.py  autoencoder_detector.py  behavioral.py  device_verifier.py  drift_detector.py  ensemble.py  explainability.py  feature_engine.py  fiu_intelligence.py  investigation.py  isolation_detector.py  mule_scorer.py  pdf_generator.py  pre_approval_gate.py  regulatory_reporter.py  risk_scorer.py  rule_engine.py  text_anomaly.py  velocity.py  victim_tracer.py
src/ml/models/: __init__.py  alert_router.py  gnn_scorer.py  logistic_classifier.py  random_forest_classifier.py  threshold.py  xgboost_classifier.py
src/simulation/: __init__.py  attack_generators.py  threat_engine.py
src/streaming/: __init__.py  cdc.py  consumer.py  endpoints.py
tests/: test_all_phases.py  test_blockchain.py  test_orchestrator.py  test_phase10_finetuning.py  test_phase11_streaming.py  test_phase12_hitl.py  test_phase13_agent_breaker.py  test_phase14_dashboard.py  test_phase15_gpu_concurrency.py  test_phase16_simulation.py  test_phase8_zkp_breaker.py  test_phase9_agent.py  test_phase9b_unstructured_agent.py
